[issue-#7] fixed code according comments